[package]
name = "deltatree"
version = "0.1.0"
authors = ["Thomas Peiselt <pi@kulturguerilla.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake         = { path = "../delta-rs/rust" }

anyhow            = "1"
itertools         = "0.10.0"
lazy_static       = "1"
pretty_assertions = "0"
regex             = "1"
tokio             = { version = "1", features = ["fs", "macros", "rt", "io-util"] }
uuid              = "0.8"
